# NFC-cardgame

./: .gitignore  CMakeLists.txt  CODEX_REVIEW.md  Makefile  README.md  cardgame.db
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-lane-pathfinding/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEWS.md  01-VALIDATION.md  01-VERIFICATION.md
docs/: README.md  project-status.md
docs/CODEMAPS/: architecture.md  backend.md  conventions.md  data.md  dependencies.md  frontend.md  integrations.md  known-issues.md  structure.md  testing.md
md/: CARD_DATA_GUIDE.md  LINUX_SETUP.md  TODO.md
sqlite/: schema.sql  seed.sql
src/core/: battlefield.c  battlefield.h  battlefield_math.c  battlefield_math.h  config.h  game.c  game.h  ore.c  ore.h  sustenance.c  sustenance.h  types.h
src/data/: card_catalog.h  cards.c  cards.h  db.c  db.h
src/entities/: building.c  building.h  entities.c  entities.h  entity_animation.c  entity_animation.h  projectile.c  projectile.h  troop.c  troop.h
src/hardware/: arduino-nfc.ino  arduino-test.ino  arduino_protocol.c  arduino_protocol.h  nfc_reader.c  nfc_reader.h
src/logic/: base_geometry.h  card_effects.c  card_effects.h  combat.c  combat.h  deposit_slots.c  deposit_slots.h  farmer.c  farmer.h  nav_frame.c  nav_frame.h  pathfinding.c  pathfinding.h  win_condition.c  win_condition.h
src/rendering/: biome.c  biome.h  card_renderer.c  card_renderer.h  debug_overlay.c  debug_overlay.h  debug_overlay_input.c  hand_ui.c  hand_ui.h  ore_renderer.c  ore_renderer.h  spawn_fx.c  spawn_fx.h  sprite_frame_atlas.h  sprite_renderer.c  sprite_renderer.h  sprite_sheet_manifest.def  status_bars.c  status_bars.h  sustenance_renderer.c  sustenance_renderer.h  tilemap_renderer.c  tilemap_renderer.h  ui.c  ui.h  uvulite_font.c  uvulite_font.h  viewport.c  viewport.h
src/systems/: audio.c  audio.h  energy.c  energy.h  match.c  player.c  player.h  progression.c  progression.h  spawn.c  spawn.h  spawn_placement.c  spawn_placement.h
tests/: test_animation.c  test_assault_slots.c  test_battlefield.c  test_battlefield_math.c  test_card_effects.c  test_combat.c  test_deposit_slots.c  test_entities.c  test_hand_ui.c  test_ore.c  test_pathfinding.c  test_player.c  test_progression.c  test_projectiles.c  test_spawn_fx.c  test_spawn_placement.c  test_status_bars.c  test_sustenance.c  test_troop.c  test_uvulite_font.c  test_win_condition.c
tools/: biome_preview.c  card_enroll.c  card_preview.c  generate_sprite_frame_atlas.py
